Fix double border

--- a/frontend/src/pages/recipebooks/[recipeBook].module.scss
+++ b/frontend/src/pages/recipebooks/[recipeBook].module.scss
@@ -58,6 +58,10 @@
     &:first-child {
       background-color: $border-color;
     }
+
+    &:last-child {
+      border-bottom: none;
+    }
   }
 }
 
